Almost done with these classes.